# nn_noxim

./: CMakeLists.txt
src/: NNModel.cpp  NNModel.h  NoximBuffer.cpp  NoximCmdLineParser.cpp  NoximCmdLineParser.h  NoximGlobalStats.cpp  NoximMain.cpp  NoximMain.h  NoximNoC.cpp  NoximNoC.h  NoximPower.cpp  NoximPower.h  NoximProcessingElement.cpp  NoximProcessingElement.h  NoximRouter.cpp  NoximRouter.h  NoximTile.h  co-sim.h  flp.c  thermal_IF.cpp  thermal_IF.h
